--- a/src/App.css
+++ b/src/App.css
@@ -42,11 +42,13 @@ html {
 
   .map {
     width: 300px;
+    padding-top: 9px;
   }
 
   #coaches {
-    padding: unset;
-    width: 90%;
+    padding: 36px 18px 18px 18px !important;
+    align-items: center;
+    justify-content: center;
   }
 
   .first {
@@ -63,7 +65,9 @@ html {
 
   .second {
     width: 100%;
+    padding: 54px 27px !important;
   }
+
   .enroll-button-container {
     margin-top: 18px !important;
   }
@@ -71,7 +75,21 @@ html {
   .profile-img {
     width: 330px !important;
   }
-  
+
+}
+
+.enroll-home {
+  text-decoration: none;
+  color: black;
+  padding: 15px 54px;
+  border: black solid 1px;
+  margin: 9px;
+}
+
+.enroll-home:hover {
+  text-decoration: none;
+  color: white !important;
+  background-color: black;
 }
 
 .home-img {
@@ -79,8 +97,18 @@ html {
 }
 
 #coaches {
-  padding: 24px;
+  display: flex;
+  flex-direction: column;
+  padding: 24px 380px;
   text-align: start;
+  align-items: center;
+  justify-content: center;
+  text-align: start;
+}
+
+.phone {
+  color: white;
+  text-decoration: none;
 }
 
 p {
@@ -94,26 +122,24 @@ p {
 
 .enroll-sub {
   font-weight: 900;
-  margin-top: 12px;
 }
 
 .enroll-button {
-  border: black solid 1px;
-  padding: 15px 54px;
   background-color: white;
   font-weight: 900;
   font-size: larger;
   cursor: pointer;
+  color: black;
+  border: none;
 }
 
 .enroll-button:hover {
-  border: black solid 1px;
-  padding: 15px 54px;
-  background-color: black;
+  
+  /* background-color: black;
   color: white;
   font-weight: 900;
   font-size: larger;
-  cursor: pointer;
+  cursor: pointer; */
 }
 
 .title {
@@ -144,6 +170,7 @@ p {
 
 .profile-img {
   width: 360px;
+  padding: 18px 0;
 }
 
 h1 {
@@ -186,7 +213,7 @@ a {
   /* display:flex; */
   background-color: black;
   color: white;
-  padding: 54px 36px;
+  padding: 54px 160px;
   text-align: start;
 }
 
