--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,11 @@
 .App {
   text-align: center;
-
 }
 
 html {
   height: 100%;
   width: 100%;
+  scroll-behavior: smooth;
 }
 
 #location {
@@ -25,6 +25,10 @@ html {
     text-align: start;
     overflow: hidden;
     position: absolute;
+  }
+
+  html {
+    scroll-behavior: smooth;
   }
 
   #location {
@@ -92,7 +96,6 @@ html {
     margin-top: 18px;
     position: absolute;
   }
-
 }
 
 .enroll-home {
@@ -123,9 +126,23 @@ html {
   text-align: start;
 }
 
+.bring {
+  display: flex;
+  flex-direction: column;
+  padding: 18px;
+  align-items: flex-start;
+  justify-content: flex-start;
+
+  width: 100%;
+  
+}
+
 .phone {
+  display: flex;
+  flex-direction: column;
   color: white;
   text-decoration: none;
+  flex-wrap: wrap;
 }
 
 p {
@@ -134,7 +151,6 @@ p {
 
 .enroll-button-container {
   margin-top: 100px;
-
 }
 
 .enroll-sub {
@@ -151,7 +167,6 @@ p {
 }
 
 .enroll-button:hover {
-  
   /* background-color: black;
   color: white;
   font-weight: 900;
@@ -164,8 +179,8 @@ p {
   display: flex;
   align-items: flex-start;
   text-transform: uppercase;
-  letter-spacing: -.003em;
-  line-height: .88em;
+  letter-spacing: -0.003em;
+  line-height: 0.88em;
   font-weight: 800;
   transform: scale(1, 1.3);
   /* padding-bottom: 3px; */
@@ -178,7 +193,7 @@ p {
 }
 
 .sub-title {
-  color: #ABDB8F;
+  color: #abdb8f;
   font-weight: 900;
   font-size: 45px;
   /* line-height: .99em; */
@@ -218,13 +233,11 @@ h1 {
   height: 666px;
   padding-bottom: 9px;
   overflow: hidden;
-
 }
 
 a {
   text-decoration: none;
 }
-
 
 .second {
   /* display:flex; */
@@ -261,7 +274,6 @@ a {
   width: 100%;
   min-height: 28px;
 }
-
 
 .App-header {
   background-color: #282c34;
