--- a/client/src/styles/Enroll.css
+++ b/client/src/styles/Enroll.css
@@ -12,6 +12,7 @@
   display: flex;
   flex-direction: column;
   margin-top: 36px;
+  width: 80%
 }
 
 .waiver {
@@ -23,8 +24,17 @@
 }
 
 .input {
+  margin: 9px auto;
+  /* padding: 9px 50px; */
+  font-weight: 300;
+  font-size: x-large;
+}
+
+.enroll-one {
   margin: 9px;
   padding: 9px;
+  font-size: medium;
+  border: 1px solid black
 }
 
 .date {
@@ -48,4 +58,6 @@
   color: black;
   align-items: center;
   justify-content: center;
+  margin-right: auto;
+  margin-left: auto;
 }
