--- a/client/src/styles/Payment.css
+++ b/client/src/styles/Payment.css
@@ -1,5 +1,11 @@
 .payment-page {
-  padding: 80px 18px 60px 18px;
+  padding: 99px 18px 60px 18px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin-right: auto;
+  margin-left: auto;
 }
 
 
