--- a/client/src/App.css
+++ b/client/src/App.css
@@ -8,6 +8,8 @@ html {
   scroll-behavior: smooth;
 }
 
+
+
 #location {
   padding: 36px 270px;
   display: flex;
@@ -36,7 +38,7 @@ html {
   }
 
   .enroll {
-    padding: 36px 18px !important;
+    padding: 36px !important;
   }
 
   .title-container {
@@ -48,11 +50,12 @@ html {
   }
 
   .home-img {
-    /* width: 100%;
-    height: 700px; */
-    /* width: 300px !important; */
     height: 700px;
     position: absolute;
+  }
+
+  .bring {
+    padding: 36px !important;
   }
 
   .map {
@@ -61,7 +64,8 @@ html {
   }
 
   #coaches {
-    padding: 36px 18px 18px 18px !important;
+    margin: 36px 18px 18px 36px;
+    padding: unset !important;
     align-items: center;
     justify-content: center;
   }
@@ -71,7 +75,7 @@ html {
   }
 
   #pricing.pricing {
-    padding: 36px 18px;
+    padding: 36px;
   }
 
   .second-text-container {
@@ -88,13 +92,21 @@ html {
   }
 
   .profile-img {
-    width: 330px !important;
+    width: 300px !important;
   }
 
   .enroll-button {
     background-color: transparent !important;
     margin-top: 18px;
     position: absolute;
+  }
+
+  .bring-h3 {
+    width: 80%;
+  }
+
+  .contact {
+    padding: 36px  !important;
   }
 }
 
@@ -103,7 +115,16 @@ html {
   color: black;
   padding: 15px 54px;
   border: black solid 1px;
-  margin: 9px;
+}
+
+.name {}
+
+.beacon {
+  margin: 9px 0px 45px 0px;
+}
+
+.map {
+  margin-top: 18px;
 }
 
 .enroll-home:hover {
@@ -116,22 +137,13 @@ html {
   width: 925px;
 }
 
-.contact {
-  background-color: black;
-  padding: 36px 18px;
-  color: white;
-}
-
-.social-container {
-  padding-top: 18px;
-}
 
 .enroll-button2 {
   padding: 27px 72px;
   background-color: #abdb8f;
   font-size: x-large;
   color: white;
-  margin-top: 9px;
+  margin-top: 18px;
 }
 
 .enroll-enroll {
@@ -140,10 +152,14 @@ html {
 }
 
 .footer {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
   background-color: #abdb8f;
-  padding: 36px 18px;
+  padding: 36px ;
   width: 100%;
   color: white;
+  height: 111px;
 }
 
 
@@ -163,18 +179,27 @@ html {
   justify-content: center;
 }
 
+.acalades {
+  margin: 0;
+
+}
+
 .consent {
   padding: 0 9px;
 }
 
 .blurb {
   text-align: justify;
+  margin: 0;
+  width: 300px !important;
 }
+
+
 
 .bring {
   display: flex;
   flex-direction: column;
-  padding: 36px 18px;
+  padding: 36px 270px;
   align-items: flex-start;
   justify-content: flex-start;
   width: 100%;
@@ -196,8 +221,13 @@ p {
   margin-top: 100px;
 }
 
+.sub-container {
+  margin: 12px 0;
+}
+
 .enroll-sub {
   font-weight: 900;
+  margin-top: 45px;
 }
 
 .enroll-button {
@@ -209,13 +239,7 @@ p {
   border: none;
 }
 
-.enroll-button:hover {
-  /* background-color: black;
-  color: white;
-  font-weight: 900;
-  font-size: larger;
-  cursor: pointer; */
-}
+.enroll-button:hover {}
 
 .title {
   font-size: 56px;
@@ -226,8 +250,8 @@ p {
   line-height: 0.88em;
   font-weight: 800;
   transform: scale(1, 1.3);
-  /* padding-bottom: 3px; */
 }
+
 
 .title-container {
   display: flex;
@@ -239,8 +263,9 @@ p {
   color: #abdb8f;
   font-weight: 900;
   font-size: 45px;
-  /* line-height: .99em; */
   transform: scale(1, 1.1);
+  /* text-shadow: -1px -21px 0 white, 1px -2px 0 white, -2px 2px 0 white, 2px 1px 0 white;
+  -webkit-font-smoothing: antialiased; */
 }
 
 .profile-img {
@@ -316,6 +341,13 @@ a {
 .contact {
   width: 100%;
   min-height: 28px;
+  background-color: black;
+  padding: 36px 270px;
+  color: white;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: flex-start;
 }
 
 .App-header {
