--- a/client/src/App.css
+++ b/client/src/App.css
@@ -8,6 +8,10 @@ html {
   scroll-behavior: smooth;
 }
 
+.full-day {
+  text-decoration: line-through;
+}
+
 
 
 #location {
@@ -50,7 +54,7 @@ html {
   }
 
   .home-img {
-    height: 700px;
+    height: 675px;
     position: absolute;
   }
 
@@ -262,8 +266,9 @@ p {
 .sub-title {
   color: #abdb8f;
   font-weight: 900;
-  font-size: 45px;
+  font-size: 36px;
   transform: scale(1, 1.1);
+  -webkit-text-stroke: 2px black;
   /* text-shadow: -1px -21px 0 white, 1px -2px 0 white, -2px 2px 0 white, 2px 1px 0 white;
   -webkit-font-smoothing: antialiased; */
 }
@@ -283,6 +288,7 @@ h1 {
   align-items: flex-start;
   text-align: start;
   padding: 140px 18px 0px 56px;
+  width: 300px;
   /* line-height: .88em; */
 }
 
