--- a/client/src/styles/Enroll.css
+++ b/client/src/styles/Enroll.css
@@ -11,8 +11,8 @@
 .link-payment {
  margin: 9px 0;
   display: flex;
-  align-items: flex-start;
-  justify-content: flex-start;
+  align-items: center;
+  justify-content: center;
 }
 
 .input-date {
@@ -26,13 +26,14 @@
 .input-dates{
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
+  align-items: center;
   justify-content: flex-start;
   padding-bottom: 36px;
 }
 
 .questions {
-
+display: flex;
+flex-direction: column;
 }
 
 
