--- a/client/src/styles/Modal.css
+++ b/client/src/styles/Modal.css
@@ -1,3 +1,30 @@
+.modal {
+  width: 500px;
+  background: white;
+  border: 1px solid #ccc;
+  transition: 1.1s ease-out;
+  box-shadow: -2rem 2rem 2rem rgba(0, 0, 0, 0.2);
+  filter: blur(0);
+  transform: scale(1);
+  opacity: .99;
+  visibility: visible;
+  margin-top: 633px;
+  padding: 36px;
+}
+
+.sign-in-form {
+  display: flex;
+  flex-direction: column;
+}
+
+.sign-in-input {
+  margin: 9px 0px;
+}
+
+.modal-container {
+  display: flex;
+}
+
 .form-dialog {
   width: 100%;
   max-width: 450px;
