--- a/client/src/styles/Show.css
+++ b/client/src/styles/Show.css
@@ -1,10 +1,11 @@
 .show-page {
-  padding-top: 90px;
+  padding: 154px 66px 66px 66px;
   min-height: 30vw;
+  text-align: start;
 }
 
 .need-account {
-padding-top: 33px;
+padding: 45px 0px 27px 0px;
 }
 
 .sign-in-title {
@@ -16,6 +17,11 @@ padding-top: 33px;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+}
+
+.account-title {
+  padding-bottom: 9px;
+  font-size: small;
 }
 
 .input-style {
@@ -33,4 +39,18 @@ padding-top: 33px;
   flex-direction: column;
   align-items: center;
   justify-self: center;
+  text-align: center;
+}
+
+.have-account-title {
+  font-size: small;
+  padding: 45px 0px 9px 0px;
+}
+
+@media screen and (max-width: 850px) {
+  .show-page {
+    padding: 127px 0px 72px 0px !important;
+    text-align: center;
+    width: 100%;
+  }
 }
