--- a/client/src/App.css
+++ b/client/src/App.css
@@ -7,6 +7,7 @@ html {
   height: 100%;
   width: 100%;
   scroll-behavior: smooth;
+  overflow-y: hidden;
 }
 
 .full-day {
@@ -638,7 +639,8 @@ h1 {
 }
 
 .first {
-  background-image: url("./images/650178022-huge.jpg");
+  overflow-y: scroll;
+  background-image: url("./images/650178022-huge.jpg") no-repeat center fixed;
   background-attachment: fixed;
   background-position: 100% 111px;
   background-repeat: no-repeat;
