--- a/client/src/App.css
+++ b/client/src/App.css
@@ -7,7 +7,6 @@ html {
   height: 100%;
   width: 100%;
   scroll-behavior: smooth;
-  overflow-y: hidden;
 }
 
 .full-day {
@@ -100,6 +99,7 @@ margin-bottom: 18px;
 
 .home {
   width: 100%;
+  overflow-y: hidden;
 }
 
 @media screen and (max-width: 850px) {
@@ -640,7 +640,7 @@ h1 {
 
 .first {
   overflow-y: scroll;
-  background-image: url("./images/650178022-huge.jpg") no-repeat center fixed;
+  background-image: url("./images/650178022-huge.jpg");
   background-attachment: fixed;
   background-position: 100% 111px;
   background-repeat: no-repeat;
