--- a/client/src/App.css
+++ b/client/src/App.css
@@ -9,6 +9,22 @@ html {
   scroll-behavior: smooth;
 }
 
+.first:before {
+  content: "";
+  display: block;
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -10;
+  background: url("./images/650178022-huge.jpg") no-repeat center center;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+
 .full-day {
   text-decoration: line-through;
 }
