--- a/client/src/styles/Location.css
+++ b/client/src/styles/Location.css
@@ -26,8 +26,30 @@ height: 270px;
 white-space: normal;
 }
 
+.location-sessions {
+  display: flex;
+  align-items: center;
+}
+
+.add-session {
+  height: 36px;
+  margin-left: auto;
+  /* border: .3px solid black; */
+}
+
 .supervisor {
   margin: 0;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+}
+
+.supervisor-name {
+margin: 0;
+}
+
+.location-h2 {
+  margin: 6px 0;
 }
 
 
@@ -49,8 +71,6 @@ white-space: normal;
   box-shadow: 0vw 0.2vw 1vw 1vw rgba(0, 0, 0, 0.1);
 }
 
-
-
 .locations {
 display: flex;
 min-height: 30vw;
@@ -64,5 +84,9 @@ min-height: 30vw;
 @media screen and (max-width: 850px) {
   .location-one {
     width: 270px !important;
+  }
+  .location-sessions {
+   flex-direction: column;
+    align-items: flex-start;
   }
 }
