--- a/client/src/styles/Show.css
+++ b/client/src/styles/Show.css
@@ -52,6 +52,7 @@ padding: 45px 0px 27px 0px;
     padding: 127px 0px 72px 0px !important;
     width: 100%;
     text-align: center;
+    min-height: 111vw;
   }
 }
 
